Revise README for Nepal Tourism Management System
Updated project description, features, technologies, and getting started instructions for the Nepal Tourism Management System.